src/scss/app.scss
[ng-cloak] {
  display: none;
}

md-content {
  background-color: #eee;
}

div[ng-view] {
  max-width: 840px;
  margin: 0 auto;
  margin-top: 17px;
  margin-bottom: 17px;

  .padding {
    padding: 15px 15px 5px;
  }

  h1, h2, h3, h4 {
    font-weight: inherit;
    margin: 0px;
  }

  .md-whiteframe-z1.padding {
    background-color: white;
  }
}

a {
  text-decoration: none;
  color: grey;
}

md-sidenav {

  .brand {
    padding: 16px 0px;
    margin: 0 auto;
    text-align: center;
    align-items: center;
    margin: 0 auto;

    img {
      margin: 0 auto;
    }
  }

}

md-menu-item {
  background: #eee;
}

md-collapse-menu-item {

  ul {

    .md-button {
      padding: 0 16px 0 32px;
      text-overflow: hidden;
      word-break: keep-all;
    }

    position: relative;
    overflow: hidden;
    transition: height 0.6s cubic-bezier(0.35, 0, 0.25, 1);
    max-width: 100%;
    margin: 0;
    padding: 0;
    list-style: none;
  }
}

table {
  border-spacing: 0;
  border-collapse: collapse;
  margin-top: 0;
  margin-bottom: 16px;

  display: block;
  width: 100%;
  overflow: auto;

  word-break: normal;
  word-break: keep-all;

  th, td {
    padding: 6px 13px;
    border: 1px solid #ddd;
  }

  tr {
    background-color: #fff;
    border-top: 1px solid #ccc;
  }
}

div[marked] {
  overflow: hidden;
  word-break: normal;

  img {
    max-width: 100%;
    height: auto;
    overflow: hidden;
  }

  pre {
    overflow-x: scroll;
    overflow-y: hidden;
    background-color: #f4f4f4;
    border-radius: 3px;
    padding: 5px;
  }

  code {
    padding: 5px;
    font-size: 14px;
    line-height: 1.55;
    background-color: #f4f4f4;
    border-radius: 3px;
  }
}

.content-loader {
  margin: 0 auto;
}

